# htool

./: CMakeLists.txt
include/htool/: htool.hpp
include/htool/basic_types/: matrix.hpp  vector.hpp
include/htool/clustering/: cluster_node.hpp  cluster_output.hpp
include/htool/clustering/tree_builder/: direction_computation.hpp  recursive_build.hpp  splitting.hpp
include/htool/distributed_operator/: utility.hpp
include/htool/hmatrix/: hmatrix.hpp  hmatrix_distributed_output.hpp  hmatrix_output.hpp  hmatrix_tree_data.hpp  sum_expressions copy_26_01.hpp  sum_expressions.hpp  sum_expressions_05_04.hpp  sum_expressions_07_04.hpp  sum_expressions_old.hpp  sum_expressions_presque.hpp  sumexpr.hpp
include/htool/hmatrix/interfaces/: virtual_admissibility_condition.hpp  virtual_generator.hpp
include/htool/hmatrix/linalg/: add_hmatrix_hmatrix_product.hpp  add_hmatrix_lrmat_product.hpp  add_hmatrix_matrix_product.hpp  add_hmatrix_matrix_product_row_major.hpp  add_hmatrix_vector_product.hpp  add_lrmat_hmatrix.hpp  add_lrmat_hmatrix_product.hpp  add_matrix_hmatrix_product.hpp  factorization.hpp  triangular_hmatrix_hmatrix_solve.hpp  triangular_hmatrix_lrmat_solve.hpp  triangular_hmatrix_matrix_solve.hpp
include/htool/hmatrix/lrmat/: lrmat.hpp  sympartialACA.hpp
include/htool/hmatrix/tree_builder/: tree_builder.hpp
include/htool/local_operators/: local_dense_matrix.hpp  local_hmatrix.hpp  local_operator.hpp
include/htool/matrix/: matrix.hpp
include/htool/matrix/linalg/: add_matrix_matrix_product.hpp  add_matrix_matrix_product_row_major.hpp  add_matrix_vector_product.hpp  factorization.hpp  transpose.hpp
include/htool/misc/: evp.hpp  logger.hpp
include/htool/solvers/: ddm.hpp  utility.hpp
include/htool/solvers/geneo/: coarse_space_builder.hpp
include/htool/solvers/interfaces/: virtual_coarse_operator_builder.hpp
include/htool/testing/: dense_blocks_generator_test.hpp  generate_test_case.hpp  generator_input.hpp  generator_test.hpp
include/htool/wrappers/: wrapper_blas.hpp  wrapper_lapack.hpp
tests/functional_tests/distributed_operator/: test_distributed_operator.hpp  test_distributed_operator_product_complex_double.cpp  test_distributed_operator_product_double.cpp
tests/functional_tests/hmatrix/: CMakeLists.txt  perf_hmatrix.cpp  test_HLU.cpp  test_air_quality.cpp  test_compression_freefem.cpp  test_hlu.hpp  test_hmatrix_build.hpp  test_hmatrix_factorization.hpp  test_hmatrix_factorization_comparaison.hpp  test_hmatrix_factorization_sum_expression.hpp  test_hmatrix_hmatrix_product.hpp  test_hmatrix_lrmat_product.hpp  test_hmatrix_matrix_product.hpp  test_hmatrix_product.hpp  test_hmatrix_triangular_solve.hpp  test_hmult.cpp  test_lrmat_hmatrix_addition.hpp  test_lrmat_hmatrix_product.hpp  test_lu copy 2.cpp  test_lu copy.cpp  test_lu.cpp  test_matrix_hmatrix_product.hpp  test_sum_expression.hpp
tests/functional_tests/hmatrix/hmatrix_addition/: test_hmatrix_addition_complex_double.cpp  test_hmatrix_addition_double.cpp
tests/functional_tests/hmatrix/hmatrix_build/: test_hmatrix_build_complex_double.cpp  test_hmatrix_build_double.cpp
tests/functional_tests/hmatrix/hmatrix_factorization/: CMakeLists.txt  test_hlu.cpp  test_hmatrix_factorization_comparaison.cpp  test_hmatrix_factorization_complex_double.cpp  test_hmatrix_factorization_double.cpp  test_hmatrix_factorization_sum_expression.cpp
tests/functional_tests/hmatrix/hmatrix_hmatrix_product/: CMakeCache.txt  CMakeLists.txt  test_hmatrix_hmatrix_product_double.cpp
tests/functional_tests/hmatrix/hmatrix_product/: CMakeLists.txt  test_hmatrix_product_complex_double.cpp  test_hmatrix_product_double.cpp  test_hmatrix_product_sumexpression.cpp
tests/functional_tests/hmatrix/hmatrix_triangular_solve/: test_hmatrix_triangular_solve_complex_double.cpp  test_hmatrix_triangular_solve_double.cpp
tests/functional_tests/hmatrix/lrmat/: test_lrmat_build.hpp  test_lrmat_lrmat_addition.hpp  test_lrmat_lrmat_product.hpp  test_lrmat_matrix_product.hpp  test_lrmat_product.hpp  test_matrix_lrmat_product.hpp  test_matrix_matrix_product.hpp
tests/functional_tests/hmatrix/lrmat/lrmat_addition/: test_lrmat_addition_complex_double.cpp  test_lrmat_addition_double.cpp
tests/functional_tests/hmatrix/lrmat/lrmat_build/: test_lrmat_build_SVD.cpp  test_lrmat_build_fullACA.cpp  test_lrmat_build_partialACA.cpp  test_lrmat_build_sympartialACA.cpp
tests/functional_tests/hmatrix/lrmat/lrmat_product/: test_lrmat_product_SVD.cpp  test_lrmat_product_complex_double.cpp  test_lrmat_product_double.cpp  test_lrmat_product_fullACA.cpp  test_lrmat_product_partialACA.cpp  test_lrmat_product_sympartialACA.cpp
tests/functional_tests/hmatrix/sum_expression/: CMakeLists.txt  test_sum_expression.cpp
tests/functional_tests/hmatrix/test_ifp/: CMakeLists.txt  test_air_quality.cpp  test_freefem.cpp  test_redressement copy.cpp  test_redressement.cpp
tests/functional_tests/matrix/: test_matrix_factorization.hpp  test_matrix_product.hpp  test_matrix_triangular_solve.hpp
tests/functional_tests/matrix/matrix_factorization/: test_matrix_factorization_complex_double.cpp  test_matrix_factorization_double.cpp
tests/functional_tests/matrix/matrix_product/: test_matrix_product_complex_double.cpp  test_matrix_product_double.cpp
tests/functional_tests/solvers/: CMakeLists.txt  test_solver.cpp  test_solver_ddm.hpp  test_solver_ddm_adding_overlap.hpp  test_solver_wo_overlap.hpp
tools/: compression_ratio_eps6.txt  error_assemble_eps6.txt  error_mat_eps6.txt  error_vect_eps6.txt  geomerty_directional_clustering_output.csv  geomerty_directional_const_clustering_output.csv  geometry_normal_clustering_output.csv  hmatrix_eps6_3directional_3067.csv  hmatrix_eps6_directional_3067.csv  hmatrix_eps6_mydirectional_3067.csv  hmatrix_eps6_normal_3067.csv  lh_LU_test0.csv  lh_LU_test1.csv  mat_LU_test0.csv  plot_comparison_compression.py  plot_data.py  plot_grah.py  plot_result.py  root_LU1.csv  time_assemble_eps4.txt  time_assemble_eps6.txt  time_mat_eps6.txt  time_vect_eps6.txt  uh_LU_test0.csv  uh_LU_test1.csv
(+7 files in other folders)
